--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,6 +14,7 @@
     %script{:crossorigin => "anonymous", :integrity => "sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF", :src => "https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"}
     %script{:src => "https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"}
     %script{:src => "https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"}
-  %body
+  %body.pb-md-0.pb-3
     =render partial: 'shared/navigation'
-    = yield
+    .container.pb-md-0.pb-5.pt-2
+      = yield
