--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -1,1 +1,24 @@
-%h1 home
+%h1 home 0
+%h1 home 1
+%h1 home 2
+%h1 home 3
+%h1 home 4
+%h1 home 5
+%h1 home 6
+%h1 home 7
+%h1 home 8
+%h1 home 9
+%h1 home 10
+%h1 home 11
+%h1 home 12
+%h1 home 13
+%h1 home 14
+%h1 home 15
+%h1 home 16
+%h1 home 17
+%h1 home 18
+%h1 home 19
+%h1 home 20
+%h1 home 21
+%h1 home 22
+%h1 home final
