--- a/app/assets/stylesheets/components/navigation.scss
+++ b/app/assets/stylesheets/components/navigation.scss
@@ -1,40 +1,43 @@
 @import "variables.scss";
 @import url("https://use.typekit.net/czt6swq.css");
 
+
 .mobile-navigation{
-    border-bottom: 1px solid #2b2b2b;
+    border-bottom: 1px solid var(--secondary-color);
     .bottom-navigation{
-        background-color: $bg-sec-color !important;
+        background-color: var(--secondary-color) !important;
         text-align: center;
-        .hover-link{
-            &:hover{
-                background-color: red;
-            }
-        }
+        // .hover-link{
+        //     &:hover{
+        //         // background-color: red;
+        //     }
+        // }
         svg{
             cursor: pointer;
-            fill: $text-primary-color;
+            fill: var(--text-color);
         }
         .active{
             padding-top: .55rem !important;
-            box-shadow: inset 0 2px $text-primary-color;
+            box-shadow: inset 0 2px var(--text-color);
+            path{
+                fill: var(--text-color);
+            }
         }
     }
 }
 
 .full-desktop-navigation{
-    background-color: black;
+    background-color: var(--background-color);
     position: -webkit-sticky; /* Safari */
     position: sticky;
     top: 0;
-    border-bottom: 1px solid #2b2b2b;
+    border-bottom: 1px solid var(--secondary-color);
     .desktop-navigation{
         padding-top: 0 !important;
         padding-bottom: 0 !important;
         .navbar{
             padding-top: 0 !important;
             padding-bottom: 0 !important;
-           
             .link{
                 height: 100% !important;
                 padding: 0 !important;
@@ -43,8 +46,10 @@
                 padding-top: 1.1rem !important;
                 padding-bottom: 1.1rem !important;
                 .nav-link{
+                    font-weight: 500 !important;
                     padding-left: 0rem !important;
                     padding-right: 0rem !important;
+                    color: var(--text-color);
                 }
             }
             .desktop-logo{
@@ -53,33 +58,33 @@
           .separate-line{
             margin-top: 1rem;
             margin-bottom: 1rem;
-            border-left: 1px solid $bg-sec-color;
+            border-left: 1px solid var(--secondary-color);
             margin-right: 2rem;
           }
         }
         .circle{
             height: 2.55rem;
             width: 2.55rem;
-            background-color: $bg-sec-color;
+            background-color: var(--secondary-color);
             border-radius: 50%;
             text-align: center;
             display: inline-block;
             svg{
                 cursor: pointer;
-                fill: $text-primary-color;
+                fill: var(--text-color);
             }
         }
         .active{
-            box-shadow: inset 0 -2px 0  $primary-color;
+            box-shadow: inset 0 -2px 0  var(--important-color);
             a{
-                color: $primary-color !important;
+                color: var(--important-color) !important;
             }
             cursor: pointer;
             transition: box-shadow .2s ease-in-out;
         }
         .not-active{
             &:hover{
-                box-shadow: inset 0 -2px 0  $bg-sec-color;
+                box-shadow: inset 0 -2px 0  var(--secondary-color);
                 transition: box-shadow .2s ease-in-out;
             }   
         }
