--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,18 +10,17 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require_tree .
  *= require_self
+ *= require_tree .
  */
  @import "variables.scss";
  @import url("https://use.typekit.net/czt6swq.css");
-
-body{
-    background-color: $bg-primary-color !important;
+ @import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,400;0,500;0,600;0,700;1,300;1,400&display=swap');
+*{
+    font-family: 'Barlow', sans-serif !important;
+    font-weight: 500 !important;
 }
 
-*{
-    color: $text-primary-color !important;
-    font-family: raleway, sans-serif !important;
-    font-weight: 500 !important;
+body{
+    background-color: var(--background-color) !important;
 }
