--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,7 +6,7 @@
     %meta{:content => "width=device-width,initial-scale=1", :name => "viewport"}/
     = csrf_meta_tags
     = csp_meta_tag
-    = stylesheet_link_tag "application", "data-turbo-track": "reload"
+    = stylesheet_link_tag "application", media: 'all', "data-turbo-track": "reload"
     = javascript_importmap_tags
     =favicon_link_tag 'favicon.ico'
     %link{:href => "https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css", :rel => "stylesheet"}/
@@ -16,5 +16,6 @@
     %script{:src => "https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"}
   %body.pb-md-0.pb-3
     =render partial: 'shared/navigation'
-    .container.pb-md-0.pb-5.pt-2
+    .container
       = yield
+    =render partial: 'shared/footer'
