--- a/app/assets/stylesheets/components/footer.scss
+++ b/app/assets/stylesheets/components/footer.scss
@@ -1,5 +1,7 @@
 .footer-custom{
     background-color: var(--secondary-color);
+    bottom: 0;
+    width: 100%;
     color: var(--text-color) !important;
     p{
         color: var(--text-color) !important;
