--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -1,9 +1,9 @@
-$text-color-dark: #E4E6EB;
+// $text-color-dark: #E4E6EB;
+$text-color-dark: #f3f4f5;
 $background-color-dark: #000000;
-$secondary-color-dark: #1a1a1a;
+$secondary-color-dark: #2b2b2b;
 $important-color-dark: #FEBE10;
 $hover-color-dark: #FEBE10;
-
 
 $text-color-light: #1a1a1a;
 $background-color-light: white;
