--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,12 +1,27 @@
+.profile-photo-name
+  .d-flex.align-items-center
+    .circle
+      %svg{:height => "48", :width => "48", :xmlns => "http://www.w3.org/2000/svg"}
+        %path{:d => "M24 22.75q-2.5 0-4.125-1.65t-1.625-4.15q0-2.5 1.625-4.125T24 11.2q2.5 0 4.125 1.625t1.625 4.125q0 2.5-1.625 4.15Q26.5 22.75 24 22.75Zm-14 14.5v-2.9q0-1.35.75-2.375t2-1.625q2.95-1.3 5.75-1.975T24 27.7q2.7 0 5.5.675t5.7 1.975q1.3.6 2.05 1.625Q38 33 38 34.35v2.9Zm1.55-1.55h24.9v-1.35q0-.75-.5-1.475-.5-.725-1.4-1.175-2.7-1.3-5.275-1.875T24 29.25q-2.7 0-5.3.575-2.6.575-5.25 1.875-.9.45-1.4 1.175-.5.725-.5 1.475ZM24 21.2q1.8 0 3.025-1.2 1.225-1.2 1.225-3t-1.225-3.025Q25.8 12.75 24 12.75q-1.8 0-3.025 1.225Q19.75 15.2 19.75 17q0 1.8 1.225 3T24 21.2Zm0-4.2Zm0 18.7Z"}-#   %li.nav-item{:role => "presentation"}
+    %div.profile-info-area
+      %h3 Profile
+      = link_to 'Sign in', root_path, class: 'sign-in-text'
 
--# %ul#myTab.nav.nav-tabs
--#   %li.nav-item{:role => "presentation"}
--#     %button#profile-tab.nav-link{"aria-controls" => "profile", "aria-selected" => "false", "data-bs-target" => "#profile", "data-bs-toggle" => "tab", :role => "tab", :type => "button"} Profile
--#   %li.nav-item{:role => "presentation"}
--#     %button#profile-tab.nav-link{"aria-controls" => "profile", "aria-selected" => "false", "data-bs-target" => "#profile", "data-bs-toggle" => "tab", :role => "tab", :type => "button"} Settings
--#   %li.nav-item{:role => "presentation"}
--#     %button#contact-tab.nav-link{"aria-controls" => "contact", "aria-selected" => "false", "data-bs-target" => "#contact", "data-bs-toggle" => "tab", :role => "tab", :type => "button"} Language & Themes
--# #myTabContent.tab-content
--#   #home.tab-pane.fade.show.active{"aria-labelledby" => "home-tab", :role => "tabpanel"}a
--#   #profile.tab-pane.fade{"aria-labelledby" => "profile-tab", :role => "tabpanel"} b
--#   #contact.tab-pane.fade{"aria-labelledby" => "contact-tab", :role => "tabpanel"} c
+
+
+%div.profile-tabs.pt-5
+  %ul.nav.items-profile-tabs{:role => "tablist"}
+    %li.nav-item{:role => "presentation"}
+      %a.tab-link.active{"data-bs-toggle" => "tab", :href => "#tab-1", :role => "tab"} Profile
+    %li.nav-item{:role => "presentation"}
+      %a.tab-link{"data-bs-toggle" => "tab", :href => "#tab-2", :role => "tab"} Settings
+    %li.nav-item{:role => "presentation"}
+      %a.tab-link{"data-bs-toggle" => "tab", :href => "#tab-3", :role => "tab"} Display & Language
+  .separate-line
+  .tab-content
+    #tab-1.tab-pane{:role => "tabpanel"}
+      %p Content for tab 1.
+    #tab-2.tab-pane{:role => "tabpanel"}
+      %p Content for tab 2.
+    #tab-3.tab-pane.active{:role => "tabpanel"}
+      =render partial: 'theme_selector'
