--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -2,34 +2,47 @@
   .container.py-4
     .row
       .col-sm-4.col-md-3.text-start.d-flex.flex-column.item
-        %h3.fs-6.footer-heading Quick Links
+        %h3.fs-6.footer-heading 
+          =t('footer.quick_links')
         %ul.list-unstyled
           %li.footer-padding
-            %a{:href => "#"} News
+            %a{:href => "#"}
+              =t('footer.news')
           %li.footer-padding
-            %a{:href => "#"} All competitions
+            %a{:href => "#"}
+              =t('footer.all_competitions')
           %li.footer-padding
-            %a{:href => "#"} All teams
+            %a{:href => "#"}
+              =t('footer.all_teams')
           %li.footer-padding
-            %a{:href => "#"} All players
+            %a{:href => "#"}
+              =t('footer.all_players')
       .col-sm-4.col-md-3.text-start.d-flex.flex-column.item
-        %h3.fs-6.footer-heading Play
+        %h3.fs-6.footer-heading
+          =t('footer.play')
         %ul.list-unstyled
           %li.footer-padding
-            %a{:href => "#"} Nearby matches
+            %a{:href => "#"}
+              =t('footer.nearby_matches')
           %li.footer-padding
-            %a{:href => "#"} Sports ground
+            %a{:href => "#"}
+              =t('footer.sports_ground')
       .col-sm-4.col-md-3.text-start.d-flex.flex-column.item
-        %h3.fs-6.footer-heading About
+        %h3.fs-6.footer-heading
+          =t('footer.about')
         %ul.list-unstyled
           %li.footer-padding
-            %a.link-secondary{:href => "#"} Store
+            %a.link-secondary{:href => "#"}
+              =t('footer.store')
           %li.footer-padding
-            %a.link-secondary{:href => "#"} Company
+            %a.link-secondary{:href => "#"}
+              =t('footer.company')
           %li.footer-padding
-            %a.link-secondary{:href => "#"} Contact
+            %a.link-secondary{:href => "#"}
+              =t('footer.contact')
       .col-sm-4.col-md-3.text-start.d-flex.flex-column.item
-        %h3.fs-6.footer-heading Follow us
+        %h3.fs-6.footer-heading
+          =t('footer.follow_us')
         %ul.list-inline.mb-0
           %li.list-inline-item
             %svg.bi.bi-facebook{:fill => "currentColor", :height => "1em", :viewbox => "0 0 16 16", :width => "1em", :xmlns => "http://www.w3.org/2000/svg"}
@@ -45,6 +58,7 @@
         .fw-bold.align-items-center.mb-2.mt-2
           =link_to root_path, class:'align-items-center desktop-logo' do
             =image_tag "logor", :style=>'width: 16em;'
-        %p.text-muted.copyright.footer-play Football. Anywhere. Anytime.
+        %p.text-muted.copyright.footer-play
+          =t('footer.motto')
         %p.text-muted.mb-3.mt-4.copyright-text.d-md-none © Copyright 2022 PlayFootball
       %p.text-muted.mb-3.mt-2.copyright-text.d-none.d-md-block © Copyright 2022 PlayFootball
