--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,6 +20,8 @@
 *{
     font-family: 'Barlow', sans-serif !important;
     font-weight: 500 !important;
+    text-decoration: none !important;
+    scrollbar-color: black !important;
 }
 
 body{
