--- a/app/assets/stylesheets/components/profile.scss
+++ b/app/assets/stylesheets/components/profile.scss
@@ -22,7 +22,35 @@
         .sign-in-text{
             color: var(--text-color) !important;
             margin-top: -.5rem !important;
+            text-decoration: underline !important;
             font-weight: 300 !important;
         }    
+    }
+}
+
+.profile-tabs{
+    color: var(--text-color);
+    .items-profile-tabs{
+        border-bottom: 1px solid var(--secondary-color);
+        .nav-item{
+            cursor: pointer;
+            margin-right: 1rem;
+            padding-bottom: .5rem;
+            
+            .tab-link{
+                padding: 0 0 .67rem 0 !important;
+            }
+            .tab-link{
+                text-decoration: none;
+                padding: 0 1.1rem 0 0;
+                color: var(--text-color);
+                font-size: 1.1rem;
+                &.active{
+                    padding-right: 0;
+                    font-weight: bold !important;
+                    box-shadow: inset 0 -2px var(--text-color);
+                }
+            }
+       }
     }
 }
