--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,6 +6,10 @@
     %meta{:content => "width=device-width,initial-scale=1", :name => "viewport"}/
     = csrf_meta_tags
     = csp_meta_tag
+    -# - if cookies[:theme] == 'dark'
+    -#   = stylesheet_link_tag 'application_dark', media: 'all', 'data-turbolinks-track': 'reload'
+    -# - else
+    -#   = stylesheet_link_tag 'application_light', media: 'all', 'data-turbolinks-track': 'reload'
     = stylesheet_link_tag "application", media: 'all', "data-turbo-track": "reload"
     = javascript_importmap_tags
     =favicon_link_tag 'favicon.ico'
@@ -14,9 +18,8 @@
     %script{:crossorigin => "anonymous", :integrity => "sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF", :src => "https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"}
     %script{:src => "https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"}
     %script{:src => "https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"}
-  -# %body.pb-md-0.pb-3{class: cookies[:theme]&.split('-')&.last}
-  %body.pb-md-0.pb-3{class: cookies[:theme]&.split('-')&.last}
+  %body.pb-md-0.pb-3{class: cookies[:theme]}
     =render partial: 'shared/navigation'
-    .container.min-vh-100.pt-5
+    .container.pt-5{style:'min-height: 92vh !important;'}
       = yield
     =render partial: 'shared/footer'
