--- a/app/views/shared/_navigation.html.haml
+++ b/app/views/shared/_navigation.html.haml
@@ -5,47 +5,56 @@
   .row.fixed-bottom.bottom-navigation
     -unless current_page?(root_path)
       .col-3{style: 'padding: .55rem;'}
-        =link_to root_path(locale: params[:locale] || I18n.default_locale)  do
+        =link_to root_path do
           %svg{:height => "40", :width => "40", :xmlns => "http://www.w3.org/2000/svg"}
             %path{:d => "M8.333 33.333v-17.5l11.709-8.791 11.625 8.791v17.5h-8.5V22.542h-6.334v10.791Zm1.417-1.416h5.667V21.125h9.166v10.792h5.667V16.542L20.042 8.833 9.75 16.542ZM20 20.375Z"}
     -else 
       .col-3
-        =link_to root_path(locale: params[:locale] || I18n.default_locale)  do
+        =link_to root_path  do
           %svg.active{:height => "40", :width => "40", :xmlns => "http://www.w3.org/2000/svg"}
             %path{:d => "M8.333 33.333v-17.5l11.709-8.791 11.625 8.791v17.5h-8.5V22.542h-6.334v10.791Z"}
 
     -unless current_page?(dashboard_path)
       .col-3{style: 'padding: .55rem'}
-        =link_to dashboard_path(locale: params[:locale] || I18n.default_locale) do
+        =link_to dashboard_path do
           %svg{:height => "40", :width => "40", :xmlns => "http://www.w3.org/2000/svg"}
             %path{:d => "M7.292 10h25.416v20H7.292Zm9.208 1.417v7.875h14.792v-7.875Zm14.792 9.291h-6.625v7.875h6.625Zm-14.792 0v7.875h6.667v-7.875Zm-7.792 7.875h6.375V11.417H8.708Z"}
     -else
       .col-3
-        =link_to dashboard_path(locale: params[:locale] || I18n.default_locale) do
+        =link_to dashboard_path do
           %svg.active{:height => "40", :width => "40", :xmlns => "http://www.w3.org/2000/svg"}
             %path{:d => "M16.5 10h16.833v9.417H16.5Zm16.833 10.583V30H25.5v-9.417Zm-16.833 0h7.875V30H16.5ZM6.667 30V10h8.666v20Z"}
     -unless current_page?(search_path)
       .col-3{style: 'padding: .55rem'}
-        =link_to search_path(locale: params[:locale] || I18n.default_locale) do
+        =link_to search_path do
           %svg{:height => "40", :width => "40", :xmlns => "http://www.w3.org/2000/svg"}
             %path{:d => "M32.625 33.583 22.042 23q-1.25 1.083-2.875 1.667-1.625.583-3.292.583-4 0-6.771-2.75t-2.771-6.708q0-4 2.771-6.75t6.729-2.75q3.959 0 6.75 2.75 2.792 2.75 2.792 6.708 0 1.75-.625 3.396T23.042 22l10.625 10.542Zm-16.75-9.75q3.375 0 5.729-2.333t2.354-5.75q0-3.375-2.354-5.729t-5.729-2.354q-3.417 0-5.771 2.354T7.75 15.75q0 3.417 2.354 5.75t5.771 2.333Z"}
     -else
       .col-3
-        =link_to search_path(locale: params[:locale] || I18n.default_locale) do
+        =link_to search_path do
           %svg.active{:height => "40", :width => "40", :xmlns => "http://www.w3.org/2000/svg"}
             %path{:d => "m33.083 35-10.75-10.75q-1.291 1.042-3.041 1.625t-3.542.583q-4.542 0-7.688-3.125-3.145-3.125-3.145-7.666 0-4.5 3.145-7.625 3.146-3.125 7.646-3.125t7.646 3.125q3.146 3.125 3.146 7.625 0 1.833-.562 3.521-.563 1.687-1.646 3.02L35.083 33ZM15.708 23.625q3.375 0 5.667-2.292 2.292-2.291 2.292-5.666 0-3.334-2.292-5.646-2.292-2.313-5.667-2.313t-5.666 2.313Q7.75 12.333 7.75 15.667q0 3.375 2.292 5.666 2.291 2.292 5.666 2.292Z"}
 
-    -unless current_page?(profile_path)
-      .col-3{style: 'padding: .55rem'}
-        =link_to profile_path(locale: params[:locale] || I18n.default_locale) do
-          %svg{:height => "40", :width => "40", :xmlns => "http://www.w3.org/2000/svg"}
-            %path.bg-primary{:d => "M20 18.958q-2.083 0-3.479-1.396-1.396-1.395-1.396-3.479 0-2.083 1.396-3.479T20 9.208q2.083 0 3.479 1.396t1.396 3.479q0 2.084-1.396 3.479-1.396 1.396-3.479 1.396ZM8.333 31.042V28.5q0-1.083.625-1.958t1.625-1.375q2.459-1.084 4.792-1.646 2.333-.563 4.625-.563t4.625.563q2.333.562 4.75 1.646 1.042.5 1.667 1.375t.625 1.958v2.542Zm1.417-1.417h20.5V28.5q0-.583-.396-1.146-.396-.562-1.104-.937-2.208-1.084-4.354-1.563-2.146-.479-4.396-.479t-4.417.479q-2.166.479-4.333 1.563-.708.375-1.104.937-.396.563-.396 1.146ZM20 17.542q1.458 0 2.458-1 1-1 1-2.459 0-1.458-1-2.458-1-1-2.458-1-1.458 0-2.458 1-1 1-1 2.458 0 1.459 1 2.459t2.458 1Zm0-3.459Zm0 15.542Z"}
-    -else
+    -if current_page?(profile_path) || current_page?(settings_path) || current_page?(language_and_theme_path)
       .col-3
-        =link_to profile_path(locale: params[:locale] || I18n.default_locale) do
-          %svg.active{:height => "40", :width => "40", :xmlns => "http://www.w3.org/2000/svg"}
-            %path.bg-primary{:d => "M20 18.958q-2.083 0-3.479-1.396-1.396-1.395-1.396-3.479 0-2.083 1.396-3.479T20 9.208q2.083 0 3.479 1.396t1.396 3.479q0 2.084-1.396 3.479-1.396 1.396-3.479 1.396ZM8.333 31.042V28.5q0-1.083.625-1.958t1.625-1.375q2.459-1.084 4.792-1.646 2.333-.563 4.625-.563t4.625.563q2.333.562 4.75 1.646 1.042.5 1.667 1.375t.625 1.958v2.542Z"}
-
+        - if user_signed_in?
+          = link_to profile_path do
+            %svg.active{:height => "40", :width => "40", :xmlns => "http://www.w3.org/2000/svg"}
+              %path.bg-primary{:d => "M20 18.958q-2.083 0-3.479-1.396-1.396-1.395-1.396-3.479 0-2.083 1.396-3.479T20 9.208q2.083 0 3.479 1.396t1.396 3.479q0 2.084-1.396 3.479-1.396 1.396-3.479 1.396ZM8.333 31.042V28.5q0-1.083.625-1.958t1.625-1.375q2.459-1.084 4.792-1.646 2.333-.563 4.625-.563t4.625.563q2.333.562 4.75 1.646 1.042.5 1.667 1.375t.625 1.958v2.542Z"}
+        - else
+          = link_to language_and_theme_path do
+            %svg.active{:height => "40", :width => "40", :xmlns => "http://www.w3.org/2000/svg"}
+              %path.bg-primary{:d => "M20 18.958q-2.083 0-3.479-1.396-1.396-1.395-1.396-3.479 0-2.083 1.396-3.479T20 9.208q2.083 0 3.479 1.396t1.396 3.479q0 2.084-1.396 3.479-1.396 1.396-3.479 1.396ZM8.333 31.042V28.5q0-1.083.625-1.958t1.625-1.375q2.459-1.084 4.792-1.646 2.333-.563 4.625-.563t4.625.563q2.333.562 4.75 1.646 1.042.5 1.667 1.375t.625 1.958v2.542Z"}
+    -else
+      .col-3{style: 'padding: .55rem'}
+        - if user_signed_in?
+          =link_to profile_path do
+            %svg{:height => "40", :width => "40", :xmlns => "http://www.w3.org/2000/svg"}
+              %path.bg-primary{:d => "M20 18.958q-2.083 0-3.479-1.396-1.396-1.395-1.396-3.479 0-2.083 1.396-3.479T20 9.208q2.083 0 3.479 1.396t1.396 3.479q0 2.084-1.396 3.479-1.396 1.396-3.479 1.396ZM8.333 31.042V28.5q0-1.083.625-1.958t1.625-1.375q2.459-1.084 4.792-1.646 2.333-.563 4.625-.563t4.625.563q2.333.562 4.75 1.646 1.042.5 1.667 1.375t.625 1.958v2.542Zm1.417-1.417h20.5V28.5q0-.583-.396-1.146-.396-.562-1.104-.937-2.208-1.084-4.354-1.563-2.146-.479-4.396-.479t-4.417.479q-2.166.479-4.333 1.563-.708.375-1.104.937-.396.563-.396 1.146ZM20 17.542q1.458 0 2.458-1 1-1 1-2.459 0-1.458-1-2.458-1-1-2.458-1-1.458 0-2.458 1-1 1-1 2.458 0 1.459 1 2.459t2.458 1Zm0-3.459Zm0 15.542Z"}
+        -else
+          =link_to language_and_theme_path do
+            %svg{:height => "40", :width => "40", :xmlns => "http://www.w3.org/2000/svg"}
+              %path.bg-primary{:d => "M20 18.958q-2.083 0-3.479-1.396-1.396-1.395-1.396-3.479 0-2.083 1.396-3.479T20 9.208q2.083 0 3.479 1.396t1.396 3.479q0 2.084-1.396 3.479-1.396 1.396-3.479 1.396ZM8.333 31.042V28.5q0-1.083.625-1.958t1.625-1.375q2.459-1.084 4.792-1.646 2.333-.563 4.625-.563t4.625.563q2.333.562 4.75 1.646 1.042.5 1.667 1.375t.625 1.958v2.542Zm1.417-1.417h20.5V28.5q0-.583-.396-1.146-.396-.562-1.104-.937-2.208-1.084-4.354-1.563-2.146-.479-4.396-.479t-4.417.479q-2.166.479-4.333 1.563-.708.375-1.104.937-.396.563-.396 1.146ZM20 17.542q1.458 0 2.458-1 1-1 1-2.459 0-1.458-1-2.458-1-1-2.458-1-1.458 0-2.458 1-1 1-1 2.458 0 1.459 1 2.459t2.458 1Zm0-3.459Zm0 15.542Z"}
 
 
 .full-desktop-navigation.d-none.d-md-block
@@ -58,40 +67,52 @@
           %li.link
           -unless current_page?(root_path)
             %li.nav-item.link.nav-link.not-active
-              = link_to t('navigation.home'), root_path(locale: params[:locale] || I18n.default_locale), class: "nav-link"
+              = link_to t('navigation.home'), root_path, class: "nav-link"
           -else
             %li.nav-item.link.nav-link.active
-              = link_to t('navigation.home'), root_path(locale: params[:locale] || I18n.default_locale), class: "nav-link"
+              = link_to t('navigation.home'), root_path, class: "nav-link"
           %li.link
           -unless current_page?(dashboard_path)
             %li.nav-item.link.nav-link.not-active
-              = link_to t('navigation.dashboard'), dashboard_path(locale: params[:locale] || I18n.default_locale), class: "nav-link"
+              = link_to t('navigation.dashboard'), dashboard_path, class: "nav-link"
           -else
             %li.nav-item.link.nav-link.active
-              = link_to t('navigation.dashboard'), dashboard_path(locale: params[:locale] || I18n.default_locale), class: "nav-link"
+              = link_to t('navigation.dashboard'), dashboard_path, class: "nav-link"
         %ul.navbar-nav.ms-auto
           -unless current_page?(search_path)
             %py-3.not-active.link{style: 'margin-right: 2rem;'}
               .circle
-                =link_to search_path(locale: params[:locale] || I18n.default_locale) do
+                =link_to search_path do
                   %svg{:height => "40", :width => "40", :xmlns => "http://www.w3.org/2000/svg"}
                     %path{:d => "M32.625 33.583 22.042 23q-1.25 1.083-2.875 1.667-1.625.583-3.292.583-4 0-6.771-2.75t-2.771-6.708q0-4 2.771-6.75t6.729-2.75q3.959 0 6.75 2.75 2.792 2.75 2.792 6.708 0 1.75-.625 3.396T23.042 22l10.625 10.542Zm-16.75-9.75q3.375 0 5.729-2.333t2.354-5.75q0-3.375-2.354-5.729t-5.729-2.354q-3.417 0-5.771 2.354T7.75 15.75q0 3.417 2.354 5.75t5.771 2.333Z"}
           -else
             %py-3.active.link{style: 'margin-right: 2rem;'}
               .circle
-                =link_to search_path(locale: params[:locale] || I18n.default_locale) do
+                =link_to search_path do
                   %svg{:height => "40", :width => "40", :xmlns => "http://www.w3.org/2000/svg"}
                     %path{:d => "M32.625 33.583 22.042 23q-1.25 1.083-2.875 1.667-1.625.583-3.292.583-4 0-6.771-2.75t-2.771-6.708q0-4 2.771-6.75t6.729-2.75q3.959 0 6.75 2.75 2.792 2.75 2.792 6.708 0 1.75-.625 3.396T23.042 22l10.625 10.542Zm-16.75-9.75q3.375 0 5.729-2.333t2.354-5.75q0-3.375-2.354-5.729t-5.729-2.354q-3.417 0-5.771 2.354T7.75 15.75q0 3.417 2.354 5.75t5.771 2.333Z"}
           .separate-line
-          -unless current_page?(profile_path)
-            %py-3.not-active.link
-              .circle
-                =link_to profile_path(locale: params[:locale] || I18n.default_locale) do
-                  %svg{:height => "40", :width => "40", :xmlns => "http://www.w3.org/2000/svg"}
-                    %path{:d => "M20 18.958q-2.083 0-3.479-1.396-1.396-1.395-1.396-3.479 0-2.083 1.396-3.479T20 9.208q2.083 0 3.479 1.396t1.396 3.479q0 2.084-1.396 3.479-1.396 1.396-3.479 1.396ZM8.333 31.042V28.5q0-1.083.625-1.958t1.625-1.375q2.459-1.084 4.792-1.646 2.333-.563 4.625-.563t4.625.563q2.333.562 4.75 1.646 1.042.5 1.667 1.375t.625 1.958v2.542Zm1.417-1.417h20.5V28.5q0-.583-.396-1.146-.396-.562-1.104-.937-2.208-1.084-4.354-1.563-2.146-.479-4.396-.479t-4.417.479q-2.166.479-4.333 1.563-.708.375-1.104.937-.396.563-.396 1.146ZM20 17.542q1.458 0 2.458-1 1-1 1-2.459 0-1.458-1-2.458-1-1-2.458-1-1.458 0-2.458 1-1 1-1 2.458 0 1.459 1 2.459t2.458 1Zm0-3.459Zm0 15.542Z"}
-          -else
+          -if current_page?(profile_path) || current_page?(settings_path) || current_page?(language_and_theme_path)
             %py-3.active.link
               .circle
-                =link_to profile_path(locale: params[:locale] || I18n.default_locale) do
-                  %svg{:height => "40", :width => "40", :xmlns => "http://www.w3.org/2000/svg"}
-                    %path{:d => "M20 18.958q-2.083 0-3.479-1.396-1.396-1.395-1.396-3.479 0-2.083 1.396-3.479T20 9.208q2.083 0 3.479 1.396t1.396 3.479q0 2.084-1.396 3.479-1.396 1.396-3.479 1.396ZM8.333 31.042V28.5q0-1.083.625-1.958t1.625-1.375q2.459-1.084 4.792-1.646 2.333-.563 4.625-.563t4.625.563q2.333.562 4.75 1.646 1.042.5 1.667 1.375t.625 1.958v2.542Zm1.417-1.417h20.5V28.5q0-.583-.396-1.146-.396-.562-1.104-.937-2.208-1.084-4.354-1.563-2.146-.479-4.396-.479t-4.417.479q-2.166.479-4.333 1.563-.708.375-1.104.937-.396.563-.396 1.146ZM20 17.542q1.458 0 2.458-1 1-1 1-2.459 0-1.458-1-2.458-1-1-2.458-1-1.458 0-2.458 1-1 1-1 2.458 0 1.459 1 2.459t2.458 1Zm0-3.459Zm0 15.542Z"}
+                -if user_signed_in?
+                  =link_to profile_path do
+                    %svg{:height => "40", :width => "40", :xmlns => "http://www.w3.org/2000/svg"}
+                      %path{:d => "M20 18.958q-2.083 0-3.479-1.396-1.396-1.395-1.396-3.479 0-2.083 1.396-3.479T20 9.208q2.083 0 3.479 1.396t1.396 3.479q0 2.084-1.396 3.479-1.396 1.396-3.479 1.396ZM8.333 31.042V28.5q0-1.083.625-1.958t1.625-1.375q2.459-1.084 4.792-1.646 2.333-.563 4.625-.563t4.625.563q2.333.562 4.75 1.646 1.042.5 1.667 1.375t.625 1.958v2.542Zm1.417-1.417h20.5V28.5q0-.583-.396-1.146-.396-.562-1.104-.937-2.208-1.084-4.354-1.563-2.146-.479-4.396-.479t-4.417.479q-2.166.479-4.333 1.563-.708.375-1.104.937-.396.563-.396 1.146ZM20 17.542q1.458 0 2.458-1 1-1 1-2.459 0-1.458-1-2.458-1-1-2.458-1-1.458 0-2.458 1-1 1-1 2.458 0 1.459 1 2.459t2.458 1Zm0-3.459Zm0 15.542Z"}
+                -else
+                  =link_to language_and_theme_path do
+                    %svg{:height => "40", :width => "40", :xmlns => "http://www.w3.org/2000/svg"}
+                      %path{:d => "M20 18.958q-2.083 0-3.479-1.396-1.396-1.395-1.396-3.479 0-2.083 1.396-3.479T20 9.208q2.083 0 3.479 1.396t1.396 3.479q0 2.084-1.396 3.479-1.396 1.396-3.479 1.396ZM8.333 31.042V28.5q0-1.083.625-1.958t1.625-1.375q2.459-1.084 4.792-1.646 2.333-.563 4.625-.563t4.625.563q2.333.562 4.75 1.646 1.042.5 1.667 1.375t.625 1.958v2.542Zm1.417-1.417h20.5V28.5q0-.583-.396-1.146-.396-.562-1.104-.937-2.208-1.084-4.354-1.563-2.146-.479-4.396-.479t-4.417.479q-2.166.479-4.333 1.563-.708.375-1.104.937-.396.563-.396 1.146ZM20 17.542q1.458 0 2.458-1 1-1 1-2.459 0-1.458-1-2.458-1-1-2.458-1-1.458 0-2.458 1-1 1-1 2.458 0 1.459 1 2.459t2.458 1Zm0-3.459Zm0 15.542Z"}
+          -else
+            %py-3.not-active.link
+              .circle
+                -if user_signed_in?
+                  =link_to profile_path do
+                    %svg{:height => "40", :width => "40", :xmlns => "http://www.w3.org/2000/svg"}
+                      %path{:d => "M20 18.958q-2.083 0-3.479-1.396-1.396-1.395-1.396-3.479 0-2.083 1.396-3.479T20 9.208q2.083 0 3.479 1.396t1.396 3.479q0 2.084-1.396 3.479-1.396 1.396-3.479 1.396ZM8.333 31.042V28.5q0-1.083.625-1.958t1.625-1.375q2.459-1.084 4.792-1.646 2.333-.563 4.625-.563t4.625.563q2.333.562 4.75 1.646 1.042.5 1.667 1.375t.625 1.958v2.542Zm1.417-1.417h20.5V28.5q0-.583-.396-1.146-.396-.562-1.104-.937-2.208-1.084-4.354-1.563-2.146-.479-4.396-.479t-4.417.479q-2.166.479-4.333 1.563-.708.375-1.104.937-.396.563-.396 1.146ZM20 17.542q1.458 0 2.458-1 1-1 1-2.459 0-1.458-1-2.458-1-1-2.458-1-1.458 0-2.458 1-1 1-1 2.458 0 1.459 1 2.459t2.458 1Zm0-3.459Zm0 15.542Z"}
+                -else
+                  =link_to language_and_theme_path do
+                    %svg{:height => "40", :width => "40", :xmlns => "http://www.w3.org/2000/svg"}
+                      %path{:d => "M20 18.958q-2.083 0-3.479-1.396-1.396-1.395-1.396-3.479 0-2.083 1.396-3.479T20 9.208q2.083 0 3.479 1.396t1.396 3.479q0 2.084-1.396 3.479-1.396 1.396-3.479 1.396ZM8.333 31.042V28.5q0-1.083.625-1.958t1.625-1.375q2.459-1.084 4.792-1.646 2.333-.563 4.625-.563t4.625.563q2.333.562 4.75 1.646 1.042.5 1.667 1.375t.625 1.958v2.542Zm1.417-1.417h20.5V28.5q0-.583-.396-1.146-.396-.562-1.104-.937-2.208-1.084-4.354-1.563-2.146-.479-4.396-.479t-4.417.479q-2.166.479-4.333 1.563-.708.375-1.104.937-.396.563-.396 1.146ZM20 17.542q1.458 0 2.458-1 1-1 1-2.459 0-1.458-1-2.458-1-1-2.458-1-1.458 0-2.458 1-1 1-1 2.458 0 1.459 1 2.459t2.458 1Zm0-3.459Zm0 15.542Z"}
+
+
