--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,9 +21,8 @@
     font-family: 'Barlow', sans-serif !important;
     font-weight: 500 !important;
     text-decoration: none !important;
-    scrollbar-color: black !important;
 }
 
 body{
-    background-color: var(--background-color) !important;
+    background-color: var(--primary-background-color) !important;
 }
