--- a/app/assets/stylesheets/components/forgot_password.scss
+++ b/app/assets/stylesheets/components/forgot_password.scss
@@ -2,7 +2,7 @@
     max-width: 25rem;
     text-align: center;
     margin: auto;
-    color: var(--text-color);
+    color: var(--primary-text-color);
     h3{
         font-weight: bold !important;
         font-size: 1.5rem !important;
@@ -12,8 +12,8 @@
         font-weight: 300 !important;
     }
     .form-control{
-        color: var(--text-color) !important;
-        background-color: var(--background-color) !important;
+        color: var(--primary-text-color) !important;
+        background-color: var(--background-primary-color) !important;
     }
     .actions{
         margin-top: 2rem;
@@ -25,7 +25,7 @@
             margin-bottom: .3rem;
         }
         .email-field{
-            color: var(--text-color) !important
+            color: var(--text-primary-color) !important
         }
     }
     form{
