--- a/app/assets/stylesheets/components/theme_lang_selector.scss
+++ b/app/assets/stylesheets/components/theme_lang_selector.scss
@@ -15,7 +15,7 @@
         padding-top: 2rem;
         .theme-lang-selector{
             a{
-                color: var(--text-color) !important;
+                color: var(--primary-text-color) !important;
             }
             label{
                 margin-top: 1rem;
@@ -25,23 +25,22 @@
             .selector{
                 border-radius: 5px;
                 &:hover{
-                    border: 1px solid var(--hover-select);
-                    transition: border .35s ease-in-out;
+                    border: 1px solid var(--primary-text-color);
+                    transition: border .25s ease-in-out;
                 }
                 display: flex;
                 justify-content: space-between;
                 cursor: pointer;
                 padding: 1.5rem;
-                border: 1px solid var(--secondary-color);
-                accent-color: red;
+                border: 1px solid var(--divide-color);
                 .form-check-input{
                     border-radius: 50%;
-                    background-color: var(--primary-color) !important;
-                    border-color: var(--text-color) !important;
+                    background-color: var(--primary-background-color) !important;
+                    border-color: var(--primary-text-color) !important;
                     outline: none;
                     &:checked{
-                        border-color: var(--important-color) !important;
-                        background-color: var(--important-color) !important;
+                        border-color: var(--accent-color) !important;
+                        background-color: var(--accent-color) !important;
                         background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10l3 3l6-6'/%3e%3c/svg%3e");
                     }
                     &:focus{
@@ -50,7 +49,7 @@
                 }
             }
             .selector.active{
-                border: 2px solid var(--important-color);
+                border: 2px solid var(--accent-color);
                 font-weight: bold !important;
             }
         }
