--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -1,55 +1,70 @@
-$text-color-dark: #f3f4f5;
-// text=> text-color-dark | important-text-color-dark | reverse-text-color-dark
-// background=> background-color-dark | important-background-color-dark | reverse-background-color-dark
-// background=> background-color-dark | important-background-color-dark | reverse-background-color-dark
-$background-color-dark: #000000;
-$secondary-color-dark: #2b2b2b;
-$important-color-dark: #FEBE10;
-$hover-color-dark: #FEBE10;
-$hover-selectors-dark: #f3f4f5;
+$primary-text-color-dark: #f3f4f5;
+$secondary-text-color-dark: #f0f0f0;
+$reverse-text-color-dark: #1a1a1a;
+$link-hover-color-dark: #febe10;
+$accent-color-dark: #febe10;
+$divide-color-dark: #2b2b2b;
+$primary-background-color-dark: black;
+$secondary-background-color-dark: #1a1a1a;
+$reverse-background-color-dark: #e1e0e7;
 
-$text-color-light: #1a1a1a;
-$background-color-light: white;
-$secondary-color-light: #f5f5fa;
-$important-color-light: black;
-$hover-color-light: #2a45f0;
-$hover-selectors-light: #1a1a1a;
+$primary-text-color-light: #1a1a1a;
+$secondary-text-color-light: #6d6a7f;
+$reverse-text-color-light: #f3f4f5;
+$link-hover-color-light: #2a45f0;
+$accent-color-light: black;
+$divide-color-light: #e1e0e7;
+$primary-background-color-light: white;
+$secondary-background-color-light: #f5f5fa;
+$reverse-background-color-light: #1a1a1a;
 
 
 @media (prefers-color-scheme: dark) {
     body{
-        --text-color: #{$text-color-dark} !important;
-        --background-color: #{$background-color-dark} !important;
-        --secondary-color: #{$secondary-color-dark} !important;
-        --important-color: #{$important-color-dark} !important;
-        --hover-color: #{$hover-color-dark} !important;
-        --hover-select: #{$hover-selectors-dark} !important;
+        --primary-text-color: #{$primary-text-color-dark} !important;
+        --secondary-text-color: #{$secondary-text-color-dark} !important;
+        --reverse-text-color: #{$reverse-text-color-dark} !important;
+        --hover-text-color: #{$link-hover-color-dark} !important;
+        --accent-color: #{$accent-color-dark} !important;
+        --divide-color: #{$divide-color-dark} !important;
+        --primary-background-color: #{$primary-background-color-dark} !important;
+        --secondary-background-color: #{$secondary-background-color-dark} !important;
+        --reverse-background-color: #{$reverse-background-color-dark} !important;
     }
 }
 @media (prefers-color-scheme: light){
     body{
-        --text-color: #{$text-color-light} !important;
-        --background-color: #{$background-color-light} !important;
-        --secondary-color: #{$secondary-color-light} !important;
-        --important-color: #{$important-color-light} !important;
-        --hover-color: #{$hover-color-light} !important;
-        --hover-select: #{$hover-selectors-light} !important;
-    }
+        --primary-text-color: #{$primary-text-color-light} !important;
+        --secondary-text-color: #{$secondary-text-color-light} !important;
+        --reverse-text-color: #{$reverse-text-color-light} !important;
+        --hover-text-color: #{$link-hover-color-light} !important;
+        --accent-color: #{$accent-color-light} !important;
+        --divide-color: #{$divide-color-light} !important;
+        --primary-background-color: #{$primary-background-color-light} !important;
+        --secondary-background-color: #{$secondary-background-color-light} !important;
+        --reverse-background-color: #{$reverse-background-color-light} !important;
+}
 }
 
 body.light{
-    --text-color: #{$text-color-light} !important;
-    --background-color: #{$background-color-light} !important;
-    --secondary-color: #{$secondary-color-light} !important;
-    --important-color: #{$important-color-light} !important;
-    --hover-color: #{$hover-color-light} !important;
-    --hover-select: #{$hover-selectors-light} !important;
+    --primary-text-color: #{$primary-text-color-light} !important;
+    --secondary-text-color: #{$secondary-text-color-light} !important;
+    --reverse-text-color: #{$reverse-text-color-light} !important;
+    --hover-text-color: #{$link-hover-color-light} !important;
+    --accent-color: #{$accent-color-light} !important;
+    --divide-color: #{$divide-color-light} !important;
+    --primary-background-color: #{$primary-background-color-light} !important;
+    --secondary-background-color: #{$secondary-background-color-light} !important;
+    --reverse-background-color: #{$reverse-background-color-light} !important;
 }
 body.dark{
-    --text-color: #{$text-color-dark} !important;
-    --background-color: #{$background-color-dark} !important;
-    --secondary-color: #{$secondary-color-dark} !important;
-    --important-color: #{$important-color-dark} !important;
-    --hover-color: #{$hover-color-dark} !important;
-    --hover-select: #{$hover-selectors-dark} !important;
+    --primary-text-color: #{$primary-text-color-dark} !important;
+    --secondary-text-color: #{$secondary-text-color-dark} !important;
+    --reverse-text-color: #{$reverse-text-color-dark} !important;
+    --hover-text-color: #{$link-hover-color-dark} !important;
+    --accent-color: #{$accent-color-dark} !important;
+    --divide-color: #{$divide-color-dark} !important;
+    --primary-background-color: #{$primary-background-color-dark} !important;
+    --secondary-background-color: #{$secondary-background-color-dark} !important;
+    --reverse-background-color: #{$reverse-background-color-dark} !important;
 }
