--- a/app/views/devise/passwords/new.html.haml
+++ b/app/views/devise/passwords/new.html.haml
@@ -3,11 +3,11 @@
     =t('forgot_password.question')
   %h5
     =t('forgot_password.text')
-  = form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f|
+  = form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post, novalidate: true }, data: {controller: "resetpass"}) do |f|
     = render "devise/shared/error_messages", resource: resource
     .field
       = f.label t('sign_in.your_email')
       %br/
-      = f.email_field :email, class: 'form-control'
+      = f.email_field :email, class: 'form-control field-text-input', data: { resetpass_target: 'email', action: 'resetpass#typeEmail' }
     .actions
       = f.submit t('forgot_password.reset_text'), class: 'sign-button'
