--- a/app/views/devise/passwords/new.html.haml
+++ b/app/views/devise/passwords/new.html.haml
@@ -8,6 +8,6 @@
     .field
       = f.label t('sign_in.your_email')
       %br/
-      = f.email_field :email, class: 'form-control field-text-input', data: { resetpass_target: 'email', action: 'resetpass#typeEmail' }
+      = f.email_field :email, class: 'form-control field-text-input', data: { resetpass_target: 'email', action: 'resetpass#isValidEmail' }
     .actions
-      = f.submit t('forgot_password.reset_text'), class: 'sign-button'
+      = f.submit t('forgot_password.reset_text'), class: 'sign-button', data: { resetpass_target: 'button' }
