--- a/app/assets/stylesheets/components/forgot_password.scss
+++ b/app/assets/stylesheets/components/forgot_password.scss
@@ -29,6 +29,9 @@
         }
     }
     form{
-    margin-top: 2rem;
+        margin-top: 2rem;
+        .form-control{
+            outline: none !important;
+        }
     }
 }
