--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,7 +9,7 @@
     = stylesheet_link_tag "application", media: 'all', "data-turbo-track": "reload"
     %meta{:content => "no-cache", :name => "turbo-cache-control"}/
     = javascript_importmap_tags
-    =favicon_link_tag 'favicon.ico'
+    -# =favicon_link_tag 'favicon.ico'
     %link{:href => "https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css", :rel => "stylesheet"}/
     %link{:crossorigin => "anonymous", :href => "https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css", :integrity => "sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC", :rel => "stylesheet"}/
     %script{:crossorigin => "anonymous", :integrity => "sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF", :src => "https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"}
