--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -57,7 +57,7 @@
       .col-12.justify-content-between.align-items-center.pt-3.text-start
         .fw-bold.align-items-center.mb-2.mt-2
           =link_to root_path, class:'align-items-center desktop-logo' do
-            =image_tag "logor", :style=>'width: 16em;'
+            =image_tag "logor.png", :style=>'width: 16em;'
         %p.text-muted.copyright.footer-play
           =t('footer.motto')
         %p.text-muted.mb-3.mt-4.copyright-text.d-md-none © Copyright 2022 PlayFootball
