--- a/app/views/shared/_navigation.html.haml
+++ b/app/views/shared/_navigation.html.haml
@@ -61,7 +61,7 @@
   .container.desktop-navigation
     %nav.navbar.navbar-expand-md
       =link_to root_path, class:'d-flex align-items-center desktop-logo' do
-        =image_tag "logor", :style=>'width: 8em;'
+        =image_tag "logor.png", :style=>'width: 8em;'
       #navbarText.collapse.navbar-collapse
         %ul.navbar-nav
           %li.link
