--- a/app/assets/stylesheets/components/sign_in.scss
+++ b/app/assets/stylesheets/components/sign_in.scss
@@ -10,7 +10,7 @@
             padding-top: 1rem;
             text-align: left;
         label{
-            color: var(--primary-text-color) !important;
+            color: var(--primary-text-color);
             font-size: .9rem;
         }
         .form-control{
